# quant_sol_project

./: .env.example  .gitignore  README.md  backtest.py  config.py  ecosystem.config.js  ecosystem.paper.config.js  exchange_helper.py  features.py  live_trading_monitor.py  ml_feature_engineering.py  okx_api.py  param_optimizer.py  position_manager.py  predict.py  pyproject.toml  requirements.txt  sandbox.py  scheduler.py  signal_engine.py  test_curl_account.py  test_curl_account.sh  test_weex_api.py  test_weex_network.py  train.py  utils.py
.claude/: plan.md
backtest/: backtest.py  simple_rule_backtest.py
config/: config.py
core/: direction_quality.py  dynamic_risk.py  ml_feature_engineering.py  okx_api.py  okx_ws.py  position_manager.py  predict.py  regime_filter.py  reward_risk.py  signal_engine.py  strategy_core.py  strategy_core.py.backup_ml_20260615_155631  trend_filter.py  weex_api.py
dashboard-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
monitoring/: hourly_performance_report.py  run_hourly_report.sh
research/: compare_smalltarget_regime.py  compare_smalltarget_regime_fast.py  directional_v2.py  directional_v2_backtest.py  directional_v2_training.py
run/: audit_market_data.py  bootstrap_vps.sh  calibrate_trade_thresholds.py  check_okx_paper_ready.py  compare_trend_filter.py  daily_trade_report.py  dashboard_server.py  deploy_paper_vps.sh  deploy_remote_vps.sh  diagnose_model_probs.py  directional_v2_experiment.py  evaluate_directional_v2_forward.py  live_trading_monitor.py  retrain_models.py  (+12 more)
(+69 files in other folders)
